Fix mobile padding for readability

--- a/css/resume-style.css
+++ b/css/resume-style.css
@@ -298,6 +298,7 @@ main{
 	}
 
 	.work{
+		padding-right: 0px;
 		width: 100%;
 	}
 	
